--- a/style.css
+++ b/style.css
@@ -6,12 +6,60 @@
 .pic{
 	margin-left: 48%;
 }
-
+/*MAIN*/
 .header{
-	padding-left: 30px;
-	padding-right: 50px;
-	/*background-color: lightgray;*/
+	padding-left: 15px;
 	font-family: "Impact";
 	font-size: 350%;
 	margin-top: 40px;
+} /*finished*/
+
+.topnav {
+  	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+  	overflow: hidden;
+  	background-color: #333;
+}
+
+li {
+  	float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 16px 20px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover {
+  background-color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
