--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @charset "utf-8";
-/*MAIN*/
+
 .header{
 	padding-left: 15px;
 	font-family: "Impact";
 	font-size: 350%;
 	margin-top: 40px;
-} /*finished*/
+}
 
+/*Top Navigation*/
 .topnav {
   	list-style-type: none;
   	margin: 0;
@@ -15,44 +16,45 @@
   	background-color: #333;
 }
 
-li {
+.topnav-locate {
   	float: left;
 }
 
-li a, .dropbtn {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 16px 20px;
-  text-decoration: none;
+.topnav-style {
+  	display: inline-block;
+  	color: white;
+  	text-align: center;
+  	padding: 16px 20px;
+  	text-decoration: none;
 }
 
-li a:hover, .dropdown:hover {
-  background-color: red;
+.topnav-style:hover {
+  	background-color: red;
 }
 
-li.dropdown {
-  display: inline-block;
+/*topnav-Dropdoưn*/
+.dropdown {
+  	display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	display: none;
+  	position: absolute;
+  	background-color: #f9f9f9;
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+.drop-list {
+  	color: black;
+  	padding: 12px 16px;
+  	text-decoration: none;
+  	display: block;
+  	text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.drop-list:hover {background-color: #f1f1f1;}
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  	display: block;
 }
