--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .topnav {
   	list-style-type: none;
   	margin: 0;
-  	padding: 0;
+    padding: 0;
   	overflow: hidden;
   	background-color: #333;
 }
@@ -29,7 +29,7 @@
 }
 
 .topnav-style:hover {
-  	background-color: red;
+  	background-color: #444444;
 }
 
 /*topnav-Dropdoưn*/
@@ -74,6 +74,7 @@
   width: 25%;
   background-color: #f1f1f1;
   padding-left: 20px;
+  padding-bottom: 20px ;
 }
 
 /* Fake image */
