--- a/lap-trinh/style.css
+++ b/lap-trinh/style.css
@@ -6,100 +6,146 @@
     font-size: 350%;
     margin-top: 40px;
 }
-    /*Top Navigation*/
-    .topnav {
-        list-style-type: none;
+
+.topnav {
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav-locate {
+    float: left;
+}
+
+.topnav-style {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 16px 20px;
+    text-decoration: none;
+}
+
+.topnav-style:hover {
+    background-color: #444444;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.drop-list {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.drop-list:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    position: absolute;
+}
+
+    .leftcolumn {   
+        float: left;
+        width: 75%;
+    }
+
+    .rightcolumn {
+        float: left;
+        width: 25%;
+        background-color: #f1f1f1;
+        padding-left: 20px;
+        padding-bottom: 20px;
+    }
+    .fakeimg {
+        background-color: #aaa;
         width: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
+        padding: 20px;
     }
 
-    .topnav-locate {
-        float: left;
-    }
-
-    .topnav-style {
-        display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 16px 20px;
-        text-decoration: none;
-    }
-
-    .topnav-style:hover {
-        background-color: red;
-    }
-
-    /*topnav-Dropdoưn*/
-    .dropdown {
-        display: inline-block;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    }
-
-    .drop-list {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-    .drop-list:hover {
-        background-color: #f1f1f1;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-        position: absolute;
-    }
-
-    .sidebar {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 18.5%;
-        background-color: #f1f1f1;
-        overflow: auto;
-        float: left;
-        margin-top: 10px;
-        }
-
-    .class1 .class2 {
-        display: block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-    }
-
-    .active {
-        background-color: #333;
-        color: white;
-        display: block;
-        padding: 8px 16px;
-        text-decoration: none;
-    }
-
-    .class1 a:hover:not(.active) {
-        background-color: #cacaca;
-        color: white;
-    }
-
-    .content {
-        float: right;
-        width: 80.5%;
-        height: 100%;
+    .card {
+        background-color: white;
+        padding: 20px;
         margin-top: 20px;
     }
-
-    .title {
-        font-size: 4vw;
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
     }
+
+.sidebar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 18.5%;
+    background-color: #f1f1f1;
+    overflow: auto;
+    float: left;
+    margin-top: 10px;
+}
+
+.class1 .class2 {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.active {
+    background-color: #333;
+    color: white;
+    display: block;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.class1 a:hover:not(.active) {
+    background-color: #cacaca;
+    color: white;
+}
+
+.content {
+    float: right;
+    width: 80.5%;
+    height: 100%;
+    margin-top: 20px;
+}
+
+.title {
+    font-size: 4vw;
+}
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 45px 95px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 25px;
+    margin-top: 20px;
+    margin-right: 25px;
+    margin-left: 40px;
+}
+
+* {
+    box-sizing: border-box;
+}
