--- a/lap-trinh/style.css
+++ b/lap-trinh/style.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+body {
+  margin: 0;
+}
+
 .header{
     padding-left: 15px;
     font-family: "Impact";
@@ -38,10 +42,11 @@
 
 .dropdown-content {
     display: none;
-    position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    position: relative;
+    z-index: 4;
 }
 
 .drop-list {
@@ -61,71 +66,35 @@
     position: absolute;
 }
 
-    .leftcolumn {   
-        float: left;
-        width: 75%;
-    }
-
-    .rightcolumn {
-        float: left;
-        width: 25%;
-        background-color: #f1f1f1;
-        padding-left: 20px;
-        padding-bottom: 20px;
-    }
-    .fakeimg {
-        background-color: #aaa;
-        width: 100%;
-        padding: 20px;
-    }
-
-    .card {
-        background-color: white;
-        padding: 20px;
-        margin-top: 20px;
-    }
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-
-.sidebar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 18.5%;
-    background-color: #f1f1f1;
-    overflow: auto;
+.leftcolumn {   
     float: left;
-    margin-top: 10px;
+    width: 75%;
 }
 
-.class1 .class2 {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+.rightcolumn {
+    float: left;
+    width: 25%;
+    background-color: #f1f1f1;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
-.active {
-    background-color: #333;
-    color: white;
-    display: block;
-    padding: 8px 16px;
-    text-decoration: none;
+.fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
 }
 
-.class1 a:hover:not(.active) {
-    background-color: #cacaca;
-    color: white;
-}
-
-.content {
-    float: right;
-    width: 80.5%;
-    height: 100%;
+.card {
+    background-color: white;
+    padding: 20px;
     margin-top: 20px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .title {
@@ -144,6 +113,31 @@
     margin-top: 20px;
     margin-right: 25px;
     margin-left: 40px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+  display: block;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
 }
 
 * {
