--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+body {
+  margin: 0;
+}
+
 .header{
 	padding-left: 15px;
 	font-family: "Impact";
@@ -104,6 +108,7 @@
   text-align: center;
   background: #ddd;
   margin-top: 20px;
+  display: block;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
