--- a/lap-trinh/style.css
+++ b/lap-trinh/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 .header{
@@ -66,6 +66,35 @@ body {
     position: absolute;
 }
 
+.sidebar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 20%;
+    height: 80%;
+    background-color: #f1f1f1;
+    position: absolute;
+    overflow: auto;
+    margin-top: 10px;
+}
+
+.sidebar-button{
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.active {
+    background-color: #313131;
+    color: white;
+}
+
+.sidebar-button:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
 .leftcolumn {   
     float: left;
     width: 75%;
@@ -111,33 +140,34 @@ body {
     display: inline-block;
     font-size: 25px;
     margin-top: 20px;
-    margin-right: 25px;
-    margin-left: 40px;
+    margin-right: 20px;
+    margin-left: 30px;
+    width: 28%;
 }
 
 /* Footer */
 .footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-  display: block;
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 38px;
+    display: block;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
+    .leftcolumn, .rightcolumn {   
+        width: 100%;
+        padding: 0;
+    }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
+    .topnav a {
+        float: none;
+        width: 100%;
+    }
 }
 
 * {
