--- a/style.css
+++ b/style.css
@@ -1,130 +1,283 @@
 @charset "utf-8";
 
 body {
-    margin: 0;
+	margin: 0;
+    font-family: Arial;
 }
 
-.header{
+* {
+    box-sizing:border-box
+}
+
+#img {
+    margin-left: 300px;
+    max-width: 100%;
+    height: auto;
+}
+
+#header{
 	padding-left: 15px;
 	font-family: "Impact";
-	font-size: 350%;
+	font-size:350%;
 	margin-top: 40px;
+	margin-bottom: 10px;
 }
 
-/*Top Navigation*/
 .topnav {
-  	list-style-type: none;
-  	margin: 0;
-    padding: 0;
-  	overflow: hidden;
-  	background-color: #333;
+    background-color: #333;
+    overflow: hidden;
 }
 
-.topnav-locate {
-  	float: left;
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-.topnav-style {
-  	display: inline-block;
-  	color: white;
-  	text-align: center;
-  	padding: 16px 20px;
-  	text-decoration: none;
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
 }
 
-.topnav-style:hover {
-  	background-color: #444444;
-}
-
-/*topnav-Dropdoưn*/
+/* Dropdown container - needed to position the dropdown content */
 .dropdown {
-  	display: inline-block;
+  float: left;
+  overflow: hidden;
 }
 
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+/* Style the dropdown content (hidden by default) */
 .dropdown-content {
-  	display: none;
-  	position: absolute;
-  	background-color: #f9f9f9;
-  	min-width: 160px;
-  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.drop-list {
-  	color: black;
-  	padding: 12px 16px;
-  	text-decoration: none;
-  	display: block;
-  	text-align: left;
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
-.drop-list:hover {background-color: #f1f1f1;}
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
 
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
 .dropdown:hover .dropdown-content {
-  	display: block;
+  display: block;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-    float: left;
-    width: 75%;
+.slideshow-container {
+    position: relative;
+    margin-top: 70px;
+    margin-bottom: -75px;
 }
 
-/* Right column */
-.rightcolumn {
-    float: left;
-    width: 25%;
-    background-color: #f1f1f1;
-    padding-left: 20px;
-    padding-bottom: 20px ;
+.mySlides {
+    display: none;
 }
 
-/* Fake image */
-.fakeimg {
-    background-color: #aaa;
+#caption {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
     width: 100%;
-    padding: 20px;
+    text-align: center;
 }
 
-/* Add a card effect for articles */
-.card {
-    background-color: white;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
+#row::after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Footer */
-.footer {
-    padding: 20px;
+#leftcolumn {   
+    float: left;
+    width: 75%;
+}
+
+#rightcolumn {
+    float: left;
+    width: 25%;
+    background-color: #f1f1f1;
+    padding-left: 20px;
+    position: sticky;
+    top: 0;
+    margin-top: 200px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+#footer {
+    padding: 40px;
     text-align: center;
     background: #ddd;
-    margin-top: 20px;
+    margin-top: 50px;
+}
+
+.card2 {
+  background-color: white;
+  padding: 10px;
+  margin-top: 20px;
+  width: 450px;
+  height: 150px;
+  border: 2px solid grey;
+  margin-left: 30px;
+  border-radius: 5px;
+  margin-right: 5px;
+  float: left;
+}
+
+#thumbnail {
+    background-color: #aaa;
+    width: 200px;
+    height:130px;
+    padding: 20px;
+    float: left;
+    margin-right: 10px;
+}
+
+#line {
+    border-bottom: 6px solid #2c2c2c;
+    width: 98%;
+    margin-left: 10px;
+}
+
+#button {
+    background-color: #2c2c2c;
+    color: white;
+    padding: 3px 0px;
+    margin-left: 60px;
+    text-align: center;
+    display: inline-block;
+    font-size: 12px;
+    width: 300px;
+    margin-top: 200px;
+}
+
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
     display: block;
+  }
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
     width: 100%;
-    padding: 0;
-    }
+    text-align: left;
+  }
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-        float: none;
-        width: 100%;
-    }
+
+
+.topnav .search-container {
+  float: right;
 }
 
-* {
-    box-sizing: border-box;
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
 }
